# cinnamon

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml
cinnamon/: cli.py  command_line.py  component.py  configuration.py  registry.py
cinnamon/utility/: configuration.py  exceptions.py  inquirer.py  python_utility.py  registration.py  sanity.py
docs/: .buildinfo  cinnamon.html  cinnamon.utility.html  commands.html  component.html  configuration.html  dependencies.html  genindex.html  index.html  modules.html  objects.inv  overview.html  py-modindex.html  quickstart.html  registration.html  search.html  searchindex.js  source.html
docs/_sources/: cinnamon.rst.txt  cinnamon.utility.rst.txt  commands.rst.txt  component.rst.txt  configuration.rst.txt  index.rst.txt  overview.rst.txt  quickstart.rst.txt  registration.rst.txt  source.rst.txt
docs/_sources/cinnamon/: command_line.rst.txt  component.rst.txt  configuration.rst.txt  index.rst.txt  registry.rst.txt
docs/_sources/examples/: benchmark.rst.txt  catalog.rst.txt  data_loader.rst.txt  index.rst.txt  model.rst.txt  overview.rst.txt
docs/cinnamon/: command_line.html  component.html  configuration.html  index.html  registry.html
docs/examples/: benchmark.html  catalog.html  data_loader.html  index.html  model.html  overview.html  processor.html
docsrc/source/: cinnamon.rst  commands.rst  component.rst  conf.py  configuration.rst  dependencies.rst  index.rst  modules.rst  overview.rst  quickstart.rst  registration.rst
docsrc/source/examples/: benchmark.rst  catalog.rst  data_loader.rst  model.rst  overview.rst  processor.rst
examples/components/: benchmark.py  data_loader.py  model.py  processor.py
examples/configurations/: benchmark.py  data_loader.py  model.py  processor.py
examples/demos/: demo_benchmark.py  demo_data_loader.py
tests/: fixtures.py  test_component.py  test_configuration.py  test_keys.py  test_modules.py  test_registry.py  test_serialization.py
tests/deeply_nested_repo/configurations/nested/: mock.py
tests/ext_repo_dep/configurations/: mock.py
tests/ext_repo_nested/configurations/: mock.py
tests/ext_repo_nested_dec/configurations/: test.py
tests/external_test_repo/configurations/: test.py  test2.py
tests/fake_main/: registry.pickle
tests/fake_main/configurations/: test.py
